# qt_event_report

./: .gitignore  CMakeLists.txt  README.md  convert_log.txt  install_debug.bat  install_release.bat
event_report_dll/: CMakeLists.txt  README.md
event_report_dll/include/: config_service.h  event_report_constants.h  event_report_dll_export.h  event_report_manager.h  event_report_service.h  feature_flag_service.h  http_service.h  identity_service.h
event_report_dll/src/: config_service.cpp  event_report_manager.cpp  event_report_service.cpp  feature_flag_service.cpp  http_service.cpp  identity_service.cpp
event_report_example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
examples/: CMakeLists.txt  MainWindow.cpp  main.cpp
include/event_report/: config_service.h  event_report_export.h  event_report_manager.h  event_report_service.h  event_report_types.h  feature_flag_service.h  http_service.h  identity_service.h
scripts/: install_debug.bat  install_release.bat
src/: CMakeLists.txt  config_service.cpp  event_report_manager.cpp  event_report_service.cpp  feature_flag_service.cpp  http_service.cpp  identity_service.cpp
test/include/event_report/: config_service.h  event_report_constants.h  event_report_manager.h  event_report_service.h  http_service.h
